--- a/springboot-slimming/server/pom.xml
+++ b/springboot-slimming/server/pom.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <version>2.4.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>cn.happyjava</groupId>
-    <artifactId>springboot-initialise</artifactId>
+    <artifactId>server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springboot-initialise</name>
-    <description>快速创建springboot项目</description>
-
+    <name>server</name>
+    <packaging>jar</packaging>
+    <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
         <maven.test.skip>true</maven.test.skip>
     </properties>
-
     <dependencies>
+        <dependency>
+            <groupId>cn.happyjava</groupId>
+            <artifactId>core</artifactId>
+            <version>0.0.1</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -42,6 +46,20 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <layout>ZIP</layout>
+                    <includes>
+                        <include>
+                            <artifactId>core</artifactId>
+                            <groupId>cn.happyjava</groupId>
+                        </include>
+                    </includes>
+                    <!--                    <excludeGroupIds>-->
+                    <!--                        com.google.api-ads,-->
+                    <!--                        com.google.api-client,-->
+                    <!--                        org.apache.commons-->
+                    <!--                    </excludeGroupIds>-->
+                </configuration>
             </plugin>
         </plugins>
     </build>
